fix: Header size on mobile

--- a/src/app/landing/components/page-header-with-cta/page-header-with-cta.component.scss
+++ b/src/app/landing/components/page-header-with-cta/page-header-with-cta.component.scss
@@ -163,4 +163,10 @@
       }
     }
   }
+
+  @media screen and (max-width: 600px) {
+    .header-cards {
+      min-height: 200px;
+    }
+  }
 }
